# Astroscale_Home_Assignment

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
.devcontainer/: devcontainer.json
ros2_ws/: frames_2025-02-10_01.47.09.gv
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/robot_bringup/share/robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/robot_bringup/share/robot_bringup/cmake/: robot_bringupConfig-version.cmake  robot_bringupConfig.cmake
ros2_ws/install/robot_bringup/share/robot_bringup/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/robot_controller/lib/robot_controller/: slider_control
ros2_ws/install/robot_controller/share/robot_controller/: local_setup.sh  package.sh  package.xml
ros2_ws/install/robot_controller/share/robot_controller/cmake/: robot_controllerConfig.cmake  (+1 more)
ros2_ws/install/robot_description/share/robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/robot_moveit/share/robot_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/robot_msgs/share/robot_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/robot_remote/share/robot_remote/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/robot_services/lib/robot_services/: move_service_client  move_service_server
ros2_ws/install/robot_services/share/robot_services/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/robot_bringup/: CMakeLists.txt
ros2_ws/src/robot_bringup/launch/: command_control_simulation.launch.py  slider_control_simulation.launch.py
ros2_ws/src/robot_controller/: CMakeLists.txt
ros2_ws/src/robot_controller/launch/: controller.launch.py  slider_controller.launch.py
ros2_ws/src/robot_controller/src/: slider_control.cpp
ros2_ws/src/robot_description/: CMakeLists.txt
ros2_ws/src/robot_description/launch/: display.launch.py
ros2_ws/src/robot_description/urdf/: common_properties.xacro  robot_gazebo.xacro  robot_ros2_control.xacro
ros2_ws/src/robot_moveit/: CMakeLists.txt  package.xml
ros2_ws/src/robot_moveit/config/: initial_positions.yaml  joint_limits.yaml  manipulator.srdf  moveit_controllers.yaml
ros2_ws/src/robot_moveit/launch/: moveit.launch.py
ros2_ws/src/robot_msgs/: CMakeLists.txt
ros2_ws/src/robot_services/: CMakeLists.txt
ros2_ws/src/robot_services/src/: move_service_client.cpp  move_service_server.cpp
(+112 files in other folders)
